# proinvestix-nextjs

./: README.md
proinvestix-api/: .env.example  .gitignore  README.md  pytest.ini  requirements.txt
proinvestix-api/app/: config.py  main.py
proinvestix-api/app/core/: dependencies.py  exceptions.py  security.py
proinvestix-api/app/db/: database.py  models.py
proinvestix-api/app/schemas/: academy.py  additional.py  auth.py  event.py  fandorp.py  foundation.py  frmf.py  identity.py  subscription.py  talent.py  transfer.py  wallet.py
proinvestix-api/tests/: conftest.py  test_academies.py  test_admin.py  test_auth.py  test_dashboard.py  test_events.py  test_foundation.py  test_talents.py  test_transfers.py  test_wallets.py
proinvestix-deploy/: .env.template  README.md
proinvestix-deploy/.github/workflows/: ci-cd.yml
proinvestix-deploy/docker/: Dockerfile.api  Dockerfile.frontend  docker-compose.yml
proinvestix-deploy/docker/nginx/: nginx.conf
proinvestix-deploy/railway/: railway.json  railway.toml
proinvestix-deploy/scripts/: deploy.sh  init-db.sql
proinvestix-deploy/vercel/: vercel.json
proinvestix-desktop/: .gitignore  README.md  next.config.js  package.json  tailwind.config.ts
proinvestix-desktop/src-tauri/: Cargo.toml  tauri.conf.json
proinvestix-desktop/src-tauri/src/: main.rs
proinvestix-desktop/src/app/: providers.tsx
proinvestix-desktop/src/lib/: api.ts  (+1 more)
proinvestix-frontend/: .env.example  .gitignore  README.md  next.config.js  package-lock.json  package.json  tsconfig.json
proinvestix-frontend/public/: manifest.json  sw.js
(+123 files in other folders)
